[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giovanni <42703789+gbronca@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
monday = {git = "https://github.com/gbronca/monday.git"}
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
