[project]
name = "imports-report-backend"
version = "0.1.0"
description = "Import Projects report backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "monday",
    "orjson>=3.10.10",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]

[tool.uv.sources]
monday = { git = "https://github.com/gbronca/monday" }
